--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4",
+    "vue-i18n": "^8.24.4",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
