--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-axios": "^3.2.4",
     "vue-i18n": "^8.24.4",
     "vue-router": "^3.2.0",
+    "vue-select": "^3.11.2",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
